@@ -1,0 +1,8 @@
+<?php
+
+
+require_once MODX_MANAGER_PATH. "controllers/default/resource/data.class.php";
+
+class ShopxResourceClientDataManagerController extends ResourceDataManagerController{
+    
+}
